[gd_scene load_steps=2 format=3 uid="uid://de4g40yftsefn"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_6f22d"]

[node name="Pause_menu" type="CanvasLayer"]
script = ExtResource("1_6f22d")

[node name="Resume" type="Button" parent="."]
self_modulate = Color(1, 0, 0.258824, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -196.0
offset_right = 128.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "RESUME"

[node name="Reset" type="Button" parent="."]
self_modulate = Color(1, 0, 0.258824, 1)
offset_left = 448.0
offset_top = 272.0
offset_right = 704.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 40
text = "RESET"

[node name="Restart" type="Button" parent="."]
self_modulate = Color(1, 0, 0.258824, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -124.0
offset_right = 128.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "RESTART
"

[node name="Controls" type="Button" parent="."]
self_modulate = Color(1, 0, 0.258824, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 20.0
offset_right = 128.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "CONTROLS
"

[node name="MainMenu" type="Button" parent="."]
self_modulate = Color(1, 0, 0.258824, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 92.0
offset_right = 128.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "MAIN MENU"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
